--- a/ansible/roles/ghost/templates/ghost_ingress.yaml.j2
+++ b/ansible/roles/ghost/templates/ghost_ingress.yaml.j2
@@ -1,32 +1,28 @@
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ghost-ingress
   namespace: ghost
   annotations:
-    kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: "nginx"
+    cert-manager.io/issuer: "letsencrypt-prod"
+    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+
     nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$1
+
 spec:
+  tls:
+  - hosts:
+    - {{ ghost_url }}
+    secretName: ghost-ingress-tls
   rules:
-  - http:
+  - host: {{ ghost_url }}
+    http:
       paths:
-      # - path: /hello-world-one(/|$)(.*)
-      #   pathType: Prefix
-      #   backend:
-      #     service:
-      #       name: aks-helloworld-one
-      #       port:
-      #         number: 80
-      # - path: /hello-world-two(/|$)(.*)
-      #   pathType: Prefix
-      #   backend:
-      #     service:
-      #       name: aks-helloworld-two
-      #       port:
-      #         number: 80
       - path: /(.*)
         pathType: Prefix
         backend:
