--- a/ansible/roles/ghost/templates/ghost_deployment.yaml.j2
+++ b/ansible/roles/ghost/templates/ghost_deployment.yaml.j2
@@ -10,7 +10,7 @@ spec:
   selector:
     matchLabels:
       app: ghost
-  replicas: 1
+  replicas: 3
   template:
     metadata:
       labels:
@@ -25,6 +25,30 @@ spec:
             name: ghost-config
         - secretRef:
             name: ghost-password
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 2368
+          initialDelaySeconds: 10
+          failureThreshold: 5
+          successThreshold: 1
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 2368
+          initialDelaySeconds: 10
+          failureThreshold: 5
+          successThreshold: 1
+          periodSeconds: 10
+        startupProbe:
+          httpGet:
+            path: /
+            port: 2368
+          failureThreshold: 10
+          successThreshold: 1
+          initialDelaySeconds: 10
+          periodSeconds: 10
         ports:
         - containerPort: 2368
           name: ghost-tcp
